# unit_test_playground

./: CMakeLists.txt  README.md  build.sh
cmake/: CMakeLists.txt.gtest
include/: .gitignore
unit_tests/: test_runner.cpp  test_template.cpp
